Add iPhone background calls and live menu
